1.0b9
-----
* Prompts in the importer interface are now colorized for easy
  reading. The default option is always highlighted.
* The "list" command now accepts a "-p" switch that causes it to show
  paths instead of titles. This makes the output of "beet ls -p"
  suitable for piping into another command such as xargs.
* The importer now provides the option to specify a MusicBrainz ID
  manually if the built-in searching isn't working for a particular
  album or track.
* $bitrate in path formats is now formatted as a human-readable kbps
  value instead of a raw integer.
* The import logger has been improved for "always-on" use. First,
  it is now possible to specify a log file in .beetsconfig. Also,
  logs are now appended rather than overwritten and contain
  timestamps.
* Album art fetching and plugin events are each now run in separate
  pipeline stages during imports. This should bring additional
  performance when using album art plugins like embedart or
  beets-lyrics.
* Accents and other Unicode decorators on characters are now treated
  more fairly by the autotagger. For example, if you're missing the
  acute accent on the "e" in "cafe", that change won't be penalized.
  This introduces a new dependency on the "unidecode" Python module.
* The bitrate of lossless files is now calculated from their file size
  (rather than being fixed at 0 or reflecting the uncompressed audio
  bitrate).
* Fixed a problem where duplicate albums or items imported at the same
  time would fail to be detected.
* BPD now uses a persistent "virtual filesystem" in order to fake a
  directory structure. This means that your path format settings are
  respected in BPD's browsing hierarchy. This may come at a performance
  cost, however. The virtual filesystem used by BPD is available for
  reuse by plugins (e.g., the FUSE plugin).
* Singleton imports ("beet import -s") can now take individual files as
  arguments as well as directories.